--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,10 @@
-name: Playwright Tests
+name: b2b Tests
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
+    workflow_dispatch: {}
 jobs:
   test:
     timeout-minutes: 60
@@ -12,7 +13,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
-        node-version: lts/*
+        node-version: 18
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Browsers
